--- a/README.adoc
+++ b/README.adoc
@@ -6,7 +6,7 @@ to allow searching for plugins and retrieving specific plugin information.
 == Hacking
 
 In order to run the plugin-site-api tests, a service needs to be online which
-can serve up a `DATA_FILE_URL`. Assuming `docker-compos` is installed on the
+can serve up a `DATA_FILE_URL`. Assuming `docker-compose` is installed on the
 system, the following commands will run the tests properly:
 
 * in another terminal: `make run`
@@ -39,7 +39,7 @@ contains new data. If so the application will the reindex the Elasticsearch data
 == Run Local Plugin Site API
 
 ----
-DATA_FILE_URL="http://url.to/plugins.json.gzip" mvn jetty:run
+DATA_FILE_URL="https://ci.jenkins.io/job/Infra/job/plugin-site-api/job/generate-data/lastSuccessfulBuild/artifact/plugins.json.gzip" mvn jetty:run
 ----
 
 This will launch an embedded Jetty container accessible at `http://localhost:8080`.
