--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,11 @@
 = Plugin Site API
 
+image:https://img.shields.io/github/release/jenkins-infra/plugin-site-api.svg?label=release[link="https://github.com/jenkins-infra/plugin-site-api/releases/latest"]
+
+:toc:
+:toc-placement: preamble
+:toclevels: 3
+
 This is the backend API for Jenkins Plugin Site frontend. It provides a REST API
 to allow searching for plugins and retrieving specific plugin information.
 
