--- a/README.adoc
+++ b/README.adoc
@@ -2,7 +2,7 @@
 
 image:https://badges.gitter.im/jenkinsci/docs.svg[link="https://gitter.im/jenkinsci/docs?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge"]
 image:https://img.shields.io/github/release/jenkins-infra/plugin-site-api.svg?label=release[link="https://github.com/jenkins-infra/plugin-site-api/releases/latest"]
-image:https://img.shields.io/docker/pulls/jenkinsciinfra/plugin-site?label=jenkinsciinfra%2Fplugin-site&logo=docker&logoColor=white[link="https://hub.docker.com/r/jenkinsciinfra/plugin-site"]
+image:https://img.shields.io/docker/pulls/jenkinsciinfra/plugin-site-api?label=jenkinsciinfra%2Fplugin-site-api&logo=docker&logoColor=white[link="https://hub.docker.com/r/jenkinsciinfra/plugin-site-api"]
 
 :toc:
 :toc-placement: preamble
@@ -730,7 +730,7 @@ Deploying:
 . Have code merged to the master branch of this repository
 . Wait pateiently 10-15 minutes (coffee time!)
 . Verify that a new container tag has been published
-  link:https://hub.docker.com/r/jenkinsciinfra/plugin-site/tags/[here].
+  link:https://hub.docker.com/r/jenkinsciinfra/plugin-site-api/tags/[here].
 . Submit a pull request to the
   link:https://github.com/jenkins-infra/jenkins-infra[jenkins-infra/jenkins-infra]
   repository updating the `profile::pluginsite::image_tag` value to the latest
